# tsp

./: .gitignore  Cargo.toml  README.md
examples/: README.md
res/: README.md  large_hubs  large_medium_hubs  medium_hubs
src/: aco.rs  consts.rs  distance.rs  graph.rs  kahan.rs  lib.rs  main.rs  math.rs  model.rs  reusable_weighted_index.rs  scaler.rs  util.rs
src/parser/: file.rs  mod.rs  record.rs
src/parser/field/: mod.rs  section_code.rs
src/types/: record.rs
src/types/field/: coord.rs  mod.rs  section_code.rs
