[package]
name = "tsp"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2"
bitvec = "1"
clap = { version = "4", features = ["derive"] }
clap-stdin = "0.5"
image = { version = "0.25", default-features = false, features = ["rayon", "png"] }
imageproc = { version = "0.25", default-features = false, features = ["rayon"] }
rand = "0.8"
rand_pcg = "0.3"
rayon = "1"
rust_decimal = { version = "1", features = ["maths", "rand"] }
rust_decimal_macros = "1"
